--- a/academico/templates/gestion_cursos.html
+++ b/academico/templates/gestion_cursos.html
@@ -33,17 +33,22 @@
             <table class="table table-striped">
                 <thead>
                     <tr>
+                        <th>#</th>
                         <th>Código</th>
                         <th>Nombre</th>
                         <th>Créditos</th>
+                        <th colspan="">Opciones</th>
                     </tr>
                 </thead>
                 <tbody>
                     {% for c in Cursos %}
                         <tr>
+                            <td>{{forloop.counter}}</td>
                             <td>{{c.codigo}}</td>
                             <td>{{c.nombre}}</td>
                             <td>{{c.creditos}}</td>
+                            <td><a href="edicionCurso/{{c.codigo}}" class="btn btn-info">Editar</a></td>
+                            <td><a href="eliminarCurso/{{c.codigo}}" class="btn btn-danger">Eliminar</a></td>
                         </tr>
                     {% endfor %}
                 </tbody>
