--- a/academico/templates/gestion_cursos.html
+++ b/academico/templates/gestion_cursos.html
@@ -2,6 +2,14 @@
 {% block body %}
 <div class="row">
     <div class="col-sm-12 col-md-6 col-lg-4 col-xl-4">
+        {% if messages %}
+            {% for i in messages %}
+                <div class="alert alert-dismissible alert-success" role="alert">
+                    <button type="button" class="close" data-dismiss="alert">&times;</button>
+                    <strong class="text-dark">{{ i }}</strong>
+                </div>
+            {% endfor %}
+        {% endif %}
         <h2>Gestión de Cursos</h2>
         <div class="card">
             <div class="card-body">
@@ -48,7 +56,7 @@
                             <td>{{c.nombre}}</td>
                             <td>{{c.creditos}}</td>
                             <td><a href="edicionCurso/{{c.codigo}}" class="btn btn-info">Editar</a></td>
-                            <td><a href="eliminarCurso/{{c.codigo}}" class="btn btn-danger">Eliminar</a></td>
+                            <td><a href="eliminarCurso/{{c.codigo}}" class="btn btn-danger btnEliminacion">Eliminar</a></td>
                         </tr>
                     {% endfor %}
                 </tbody>
